# DKDMD

./: .gitignore  Cargo.toml  LICENSE  README.md  install-mac.sh  install.sh
.github/: formula.rb.template
.github/workflows/: auto-tag.yml  release.yml
src/: cli.rs  commands.rs  config.rs  main.rs  menu.rs  models.rs  tools.rs
